
Name:              xcb-ffi
Version:           0.0.0
Description:       Raw bindings to libxcb
License:           BSD3
License-file:      LICENSE
Author:            Antoine Latter
Maintainer:        aslatter@gmail.com
Build-Type:        Simple

Library

  Build-depends: base == 4.*, bytestring == 0.9.*

  Exposed-modules:  Foreign.IOVec,
                    Graphics.X11.Xcb.Internal,
                    Graphics.X11.Xcb

  Extensions: ScopedTypeVariables, ForeignFunctionInterface
  Build-Tools: c2hs

  Extra-libraries: xcb

  Ghc-options: -Wall