
Name:              xcb-ffi
Version:           0.0.0
Description:       Raw bindings to libxcb
License:           BSD3
License-file:      LICENSE
Author:            Antoine Latter
Maintainer:        aslatter@gmail.com
Build-Type:        Simple

Cabal-Version:     >= 1.6

Library

  Build-depends: base == 4.*, bytestring == 0.9.*

  Exposed-modules:  Foreign.IOVec,
                    Graphics.X11.Xcb.Internal,
                    Graphics.X11.Xcb

  c-sources:  cbits/handoff.c

  Extensions: ScopedTypeVariables, ForeignFunctionInterface
  Build-Tools: c2hs

  Extra-libraries: xcb

  Ghc-options: -Wall