
Name:              xhb-core
Version:           0.0.0
Description:       Low-level operations for interacting with XCB
License:           BSD3
License-file:      LICENSE
Author:            Antoine Latter
Maintainer:        aslatter@gmail.com
Build-Type:        Simple

Cabal-Version:     >= 1.6

Library

  Build-depends: base == 4.*, bytestring == 0.9.*

  Exposed-modules:  Graphics.Xhb.Connection,
                    Graphics.Xhb.Ext

  Other-modules:    Foreign.IOVec,
                    Graphics.Xhb.Internal,
                    Graphics.Xhb.Types

  c-sources:  cbits/handoff.c

  Extensions: ScopedTypeVariables, ForeignFunctionInterface
  Build-Tools: c2hs

  Pkgconfig-depends: xcb

  Ghc-options: -Wall